--- a/index.html
+++ b/index.html
@@ -88,6 +88,33 @@
         <span class="divider">ㅣ</span>
         <li><a href="/">광고안내</a></li>
       </ul>
+<div class="information">
+  <div class="logo">
+    <span class="visually-hidden">Coupang</span>
+  </div>
+  <div class="info1">
+    <p>상호명 및 호스팅 서비스 제공 : 쿠팡(주)</p>
+    <p>대표이사 : 강한승, 박대준</p>
+    <p>서울시 송파구 송파대로 570</p>
+    <p>사업자 등록번호 : 120-88-00767</p>
+    <p>통신판매업신고:2017-서울송파-0680</p>
+  </div>
+  <div class="info2">
+    <span class="stronger">365고객센터</span>
+    <span class="divider2">|</span>
+    <span>전자금융거래분쟁처리담당</span>
+    <a href="tel:전화번호" class="phnumber">1577-7011</a>
+    <p>서울시 송파구 송파대로 570</p>
+    <a href="mailto:help@coupang.com?subject=문의사항">help@coupang.com</a>
+  </div>
+  <div class="info3">
+    <p class="stronger">우리은행 채무지급보증 안내</p>
+    <p class="info3_text">당사는 고객님이 현금 결제한 금액에 대해<br>
+      우리은행과 채무지급보증 계약을 체결하여<br>
+      안전거래를 보장하고 있습니다.</p>
+  </div>
+</div>
+
     </footer>
     
   </body>
